--- a/package.json
+++ b/package.json
@@ -217,6 +217,7 @@
     "**/**/serialize-javascript": "^3.1.0",
     "**/**/elliptic": "^6.5.4",
     "**/**/socket.io": "^2.4.0",
-    "**/**/y18n": "^3.2.2"
+    "**/**/y18n": "^3.2.2",
+    "**/**/ssri": "8.0.1"
   }
 }
